 - TODO : manage when sftp submodule is not available => throw the right exception
 - INPG : add sudo support / with password prompt recognition...
 
------------------------------------------------------------------
0.9.15 (2014-xx-xx)

 - ShellOperations : dirname added
 - ShellOperations : basename added
 - ShellOperations : lastModified fix because of millis

------------------------------------------------------------------
0.9.14 (2014-09-23)

 - small test fix on test shell command
 - pull request merged : add Travis CI configuration file from zaneli authored on 29 Apr
 - scala 2.11.2
 - commons-compress 1.8.1
 - ShellOperations : lastModified darwin implementation added + test case
 - ShellOperations : disableHistory method added + test case
 - ShellOperationsTest class added.
 - small tests cleanup and improvements
 - shell history can now be processed
 - SSHReact class first implementation, it allows you to interact with a running command
   (for example send the password at the right moment, or enter values required by a read command)
 - SSHReact test class added
 - new shell commands :
   + pidof : get pid of all processes matching the given command line regular expression
   + disableHistory : to not impact current user shell commands history
   + uptime : get the uptime of the server

------------------------------------------------------------------
0.9.13 (2014-05-31)

 - scala 2.11 support added
 - scala-logging-slf4j 2.1.2
 - scala-io 0.4.3
 - scalatest 2.1.5
 - jsch 0.1.51
 - and various impact changes

------------------------------------------------------------------
0.9.12 (2014-01-20)

 - sbt-eclipse 2.4.0
 - sbt-assembly 0.10.2
 - scalatest 2.0
 - scala 2.10.3
 - commons-compress 1.7

------------------------------------------------------------------
0.9.11 (2013-09-24)

 - receiveNcompress was not using localbasename parameter with already compressed remote files.
 - sbt-eclipse 2.3.0